<?xml version="1.0"?>
<package format="3">
  <name>f1tenth_planning_custom_msgs</name>
  <version>0.0.0</version>
  <description>Custom message definitions for F1TENTH planning with velocity.</description>
  <maintainer email="example@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rosidl_default_generators</depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
